--- a/style.css
+++ b/style.css
@@ -1,47 +1,54 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;1,100&display=swap');
 
-
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     line-height: 1.7;
+    background: linear-gradient(to bottom, #f0f0f0, #e8ffeae8);
 }
 
-h1{
+h1 {
     font-size: 36px;
     font-weight: bold;
     text-align: center;
-    margin: 40px 0 60px 0;
+    margin: 40px 0 60px;
+    color: #333;
 }
 
-form{
-    display: flex; 
+h3{
+    font-size: 17px;
+    font-weight: bold;
+    text-align: center;
+    margin: 40px 0 60px;
+    color: #333;
+}
+
+form {
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 60px;
-
 }
 
-#search-input{
+#search-input {
     width: 60%;
     max-width: 400px;
     padding: 10px 20px;
-    border: none; 
+    border: none;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     font-size: 18px;
     color: #333;
 }
 
-#search-button{
+#search-button {
     padding: 10px 20px;
-    background-color:rgb(73, 76, 164);
+    background-color: #4a90e2;
     color: #fff;
     border: none;
     font-size: 18px;
@@ -51,7 +58,7 @@ form{
     margin-left: 10px;
 }
 
-.search-results{
+.search-results {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -59,37 +66,36 @@ form{
     margin: 0 auto;
 }
 
-.search-result{
-    margin-bottom: 60px;
-    width: 30%;
-    height: 100%;
+.search-result {
+    margin-bottom: 40px;
+    width: calc(33.33% - 20px);
     border-radius: 5px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     overflow: hidden;
+    transition: transform 0.2s ease-in-out;
+}
+
+.search-result:hover {
+    transform: translateY(-5px);
 }
 
 .search-result img {
     width: 100%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
-    transition: opacity 0.2s ease-in-out;
 }
 
-.search-result:hover img{
-    opacity: 0.8;
-}
-
-.search-result a{
-    font-size: 18px;
+.search-result a {
+    font-size: 16px;
     text-decoration: none;
-    color: #333;
+    color: #4a90e2;
     display: block;
     padding: 10px;
     text-transform: capitalize;
 }
 
-#show-more-button{
-    background-color: #008cba;
+#show-more-button {
+    background-color: #4a90e2;
     font-size: 18px;
     border: none;
     color: #fff;
@@ -103,18 +109,17 @@ form{
 }
 
 @media screen and (max-width: 768px) {
-
-    .search-results{
+    .search-results {
         padding: 20px;
     }
 
-    .search-results{
-        width: 45%;
+    .search-result {
+        width: calc(50% - 20px);
     }
 }
 
 @media screen and (max-width: 480px) {
-    .search-results{
-        width: 10%;
+    .search-result {
+        width: calc(100% - 20px);
     }
 }
