--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ form {
 
 #search-button {
     padding: 10px 20px;
-    background-color: #4a90e2;
+    background-color: #4cd35e;
     color: #fff;
     border: none;
     font-size: 18px;
